# pacman

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT  CONTRIBUTE.md  Dockerfile  Doxyfile  LICENSE  README.md  SECURITY  SECURITY.md  index.html  run_local.sh
.github/workflows/: run-ci.yml
arborx-mls-3d/: CMakeLists.txt  moving_least_squares.cpp
cmake/: PACMANAddFETests.cmake  PACMANAddMLSTests.cmake  PACMANAddRBFTests.cmake  PACMANConfig.cmake.in
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/src/: fortran_interface.cpp.func-c.html  fortran_interface.cpp.func.html  fortran_interface.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  interface.cpp.func-c.html  interface.cpp.func.html  interface.cpp.gcov.html  interpolate.hpp.func-c.html  interpolate.hpp.func.html  interpolate.hpp.gcov.html  mls_interface.cpp.func-c.html  mls_interface.cpp.func.html  mls_interface.cpp.gcov.html  pacman_fortran.f90.func-c.html  pacman_fortran.f90.func.html  pacman_fortran.f90.gcov.html  rbf_interface.cpp.func-c.html  rbf_interface.cpp.func.html  rbf_interface.cpp.gcov.html
coverage/src/mls/: index.html  (+5 more)
coverage/tests/: index-sort-f.html  index-sort-l.html  index.html  test_cpp_fe_interface.cpp.func-c.html  test_cpp_fe_interface.cpp.func.html  test_cpp_fe_interface.cpp.gcov.html  test_cpp_mls_interface.cpp.func-c.html  test_cpp_mls_interface.cpp.func.html  test_cpp_mls_interface.cpp.gcov.html  test_cpp_rbf_interface.cpp.func-c.html  test_cpp_rbf_interface.cpp.func.html  test_cpp_rbf_interface.cpp.gcov.html  test_fortran_fe_interface.f90.func-c.html  test_fortran_fe_interface.f90.func.html  test_fortran_fe_interface.f90.gcov.html  test_fortran_mls_interface.f90.func-c.html  test_fortran_mls_interface.f90.func.html  test_fortran_mls_interface.f90.gcov.html  test_fortran_rbf_interface.f90.func-c.html  test_fortran_rbf_interface.f90.func.html  test_fortran_rbf_interface.f90.gcov.html  (+3 more)
docs/: doxygen_extra.css
env/: spack.yaml
interpolation/medcoupling/: 0.01.med  CMakeLists.txt  interpolation_evaluation.cpp
medcoupling/: 0.006.med  interpolation_evaluation.cpp
muscat/: interpolation_evaluation.py
rbf-pum-direct/: CMakeLists.txt  README.md  batched_operations.hpp  cache_data.hpp  callbacks.hpp  cluster.hpp  clustering.hpp  clusters_radius.hpp  interpolator.hpp  interpolator.hxx  main.cpp  main.py  polynomial.hpp  rbf_functions.hpp  utils.hpp
rbf-pum-direct/env/: spack.yaml
rbf-pum-direct/src/: callbacks.hpp  concepts.hpp  interpolator.hpp  interpolator.hxx
rbf-pum-direct/src/clustering/: clustering.hpp  clusters_radius.hpp
rbf-pum-direct/src/pybindings/: bindings.cpp  utils.hpp
rbf-pum-direct/src/solver/: rbf_functions.hpp  solver.hpp
rbf-pum-direct/src/solver/device/: kokkoskernels_matrices_op.hpp  kokkoskernels_solver.hpp
rbf-pum-direct/src/solver/host/: eigen_matrices_op.hpp  eigen_solver.hpp
rbf-pum-direct/src/solver/utils/: getters.hpp  serial_ops.hpp  serial_solve.hpp  team_ops.hpp  team_solve.hpp
rbf-pum-direct/src/utils/: operators.hpp  utils.hpp
rbf-pum-direct/tests/: tests.cpp  utils.hpp
solve_with_eigen/: CMakeLists.txt  main.cpp
spack_envs/: spack_cuda.yaml  spack_ghci.yaml  spack_ghci.yml  spack_hip.yaml  spack_openmp.yaml
src/: CMakeLists.txt  fortran_interface.cpp  fortran_interface.h  interface.cpp  interface.hpp  interface_eti_cuda.cpp  interface_eti_hip.cpp  interface_eti_openmp.cpp  interface_eti_serial.cpp  interface_eti_threads.cpp  interpolate.hpp  mls_interface.cpp  mls_interface_eti_openmp.cpp  mls_interface_eti_threads.cpp  pacman_fortran.f90  rbf_interface.cpp  rbf_interface_eti_hip.cpp  rbf_interface_eti_serial.cpp  rbf_interface_eti_sycl.cpp  rbf_interface_eti_threads.cpp
src/common/: concepts.hpp  execspaces.hpp  transfer.hxx  types.hpp
src/finite_elements/: CMakeLists.txt  FTInterpClamp.hpp  FTInterpExtrap.hpp  FTInterpNearest.hpp  FTInterpZero.hpp  FTNearest.hpp
src/finite_elements/utils/: Algebra.hpp  ArborXCallbacks.hpp  ComputeLinearSkin.hpp  ComputeLinearSkin.hxx  FEInterpolatorTools.hxx  FESkinTools.hpp  FETools.hpp  FETools.hxx  FTUtils.hpp  FieldTransferTools.hxx  NewtonKokkos.hpp  SkinProjection.hpp  pyramid_shape_functions.py
src/mls/: CMakeLists.txt  interpolator.hpp  interpolator.hxx
src/pybindings/: CMakeLists.txt  bindings.cpp  bindings.hpp  fe_bindings.cpp  fe_bindings.hpp  fe_eti_serial.cpp  fe_eti_sycl.cpp  mls_bindings.cpp  mls_bindings.hpp  mls_eti_cuda.cpp  mls_eti_hip.cpp  mls_eti_serial.cpp  mls_eti_sycl.cpp  rbf_bindings.cpp  rbf_bindings.hpp  rbf_eti_cuda.cpp  rbf_eti_openmp.cpp  rbf_eti_serial.cpp  rbf_eti_sycl.cpp
src/rbf_pum/: CMakeLists.txt  callbacks.hpp  interpolator.hpp  interpolator.hxx
src/rbf_pum/clustering/: clustering.hpp  clusters_radius.hpp
src/rbf_pum/solver/: rbf_functions.hpp  solver.hpp
src/rbf_pum/solver/utils/: getters.hpp  serial_ops.hpp  serial_solve.hpp  team_ops.hpp  team_solve.hpp
src/rbf_pum/utils/: operators.hpp  utils.hpp
tests/: CMakeLists.txt  dummy.py  franke_functions.py  test_3d.sh  test_cpp_fe_interface.cpp  test_cpp_mls_interface.cpp  test_cpp_rbf_interface.cpp  test_fe.py  test_fortran_fe_interface.f90  test_fortran_mls_interface.f90  test_fortran_rbf_interface.f90  test_import.py  test_mls.py  test_pybindings.py  test_rbf-pum.py  test_unit_fe_tools.cpp  tests.cpp  utils.hpp
tests/meshes/: 0.002.vtu  0.003.npz  0.003.vtu  0.004.vtu  0.01.vtu  0.02.vtu  0.03.npz  0.03.vtu  aste_source.npz  aste_source.vtk  aste_target.npz  hexahedron20_source.npz  hexahedron20_target.npz  hexahedron_source.npz  hexahedron_source.vtk  line3_source.npz  line3_target.npz  line_source.npz  line_target.npz  pyramid13_source.npz  pyramid13_target.npz  pyramid_source.npz  pyramid_source.vtk  pyramid_target.npz  pyramid_target.vtk  quad8_source.npz  quad8_target.npz  quad_source.npz  quad_source.vtk  quad_target.vtk  tetra10_source.npz  tetra10_target.npz  tetra_source.npz  tetra_source.vtk  tetra_target.vtk  triangle6_source.npz  triangle6_target.npz  triangle_source.npz  triangle_source.vtk  triangle_target.npz  (+7 more)
(+690 files in other folders)
